--- a/CSS/amazon.css
+++ b/CSS/amazon.css
@@ -217,7 +217,7 @@ padding: 10px 0;
 
 /* Estilos para el contenedor de la imagen y la descripción */
 .contenedor-imagen {
-  display: flex;
+  display: inline-block;
   align-items: center;
 }
 
@@ -233,36 +233,33 @@ padding: 10px 0;
   height: 500px; 
 }
 
+
+/* Estilos del contenedor padre donde va la descripción con las estrellas */
+.segundo-contenedor {
+  width: 500px;
+  height: 320px;
+  display: flex;
+  flex-direction: column;
+  margin-top: -525px; /* Ajusta según sea necesario */
+  margin-left: 750px;
+  margin-bottom: 200px; /* Ajusta según sea necesario */
+  background-color: blue;
+}
+
 /* Estilos para la descripción principal */
 .descripcion-principal {
-  font-size: 25px;
-  max-width: 60%; /* Ajusta según sea necesario */
-  margin-left: 20px; /* Espacio entre la imagen y el texto, ajusta según sea necesario */
-  white-space: pre-line;
-  font-weight: bold;
-  margin-right: 350px;
-  margin-top: -260px;
-}
-
-/* Estilos para el contenido adicional */
-.contenido-extra {
+  font-size: 25px; /* Ajusta según sea necesario */
   max-width: 100%;
-  margin-top: 20px; /* Ajusta según sea necesario */
-  margin-left: 260px;
+  margin-top: 10px;
+  font-weight: bold;
+  background-color: red;
 }
 
-.contenido-extra p {
-  font-size: 1rem; /* Ajusta según sea necesario */
-  color: #333;
-}
-
-/*Estilos del enlace debajo de la descripción principal*/
+/* Estilos para el enlace debajo de la descripción principal */
 .enlace {
-  display: flex;
-  width: 190px;
   list-style: none;
-  margin-left: -795px;
-  margin-top: 85px;
+  margin-top: 10px;
+  background-color: red;
 }
 
 .enlace li a {
@@ -277,27 +274,21 @@ padding: 10px 0;
   cursor: pointer; /* Cambia el cursor a una manita al pasar el cursor */
 }
 
-/*Numeros de las estrellas*/
-
-.numerosEstrellas{
-  display: flex;
-  margin-top: 145px;
+/* Numeros de las estrellas */
+.numerosEstrellas {
+  margin-top: 10px;
+  background-color: red;
 }
 
-.numerosEstrellas span{
-  margin-left: -795px;
+.numerosEstrellas span {
+  font-size: 18px; /* Ajusta según sea necesario */
+ 
 }
 
-
-/*Estilos de las estrellas*/
+/* Estilos de las estrellas */
 .star-rating {
-  font-size: 0;
-  margin: 10px auto;
-  position: relative;
-  display: flex;
-  left: -770px;
-  margin-top: 150px;
-  
+  font-size: 18px; /* Ajusta según sea necesario */
+  margin-top: 10px;
 }
 
 .star-rating input[type="radio"] {
@@ -306,7 +297,6 @@ padding: 10px 0;
 
 .star-rating label {
   display: inline-block;
-  font-size: 20px;
   margin: 0;
   padding: 0;
   cursor: pointer;
@@ -320,6 +310,18 @@ padding: 10px 0;
 .star-rating label::before {
   content: '\2605'; /* Código de estrella en Unicode */
   margin: 0 5px;
+}
+
+/* Estilos para el contenido adicional */
+.contenido-extra {
+  max-width: 100%;
+  margin-top: 20px; /* Ajusta según sea necesario */
+  margin-left: 260px;
+}
+
+.contenido-extra p {
+  font-size: 1rem; /* Ajusta según sea necesario */
+  color: #333;
 }
 
 
